--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "no-console": "off",
     "no-plusplus": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-param-reassign":"off"
   }
 }
